--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,13 @@
         "react/react-in-jsx-scope": 0,
         "react/jsx-props-no-spreading": 0,
         "react/prop-types": 0
+    },
+    "settings": {
+        "import/resolver": {
+            "alias": {
+                "map": [["@", "./src"]],
+                "extensions": [".jsx", ".js", ".json"]
+            }
+        }
     }
 }
